ajuste na recuperação das categorias e na forma de salvar as tarefaz para poderem ser listadas corretamente